check-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: check-pod
  labels:
    app: check
spec:
  containers:
    - name: http
      image: busybox
      command:
        - sh
        - -c
        - |
          while true; do
            echo -e "HTTP/1.1 200 OK\r\n\r\nOK" | nc -l -p 8080;
          done
