multitool-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multitool-test
spec:
  containers:
    - name: multitool
      image: wbitt/network-multitool
