netology-web.yaml
apiVersion: v1
kind: Pod
metadata:
    name: netology-web
    labels: 
      app: netology
spec:
  containers:
  - name: netology-web
    image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
    ports:
    - containerPort: 80
