check-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: check-service
spec:
  selector:
    app: check
  ports:
    - port: 8080
      targetPort: 8080
