nginx-multitool-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-multitool-service
spec:
  selector:
    app: nginx-multitool
  ports:
    - name: nginx
      port: 80      
      targetPort: 80
