service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-multitool-service
  namespace: default
spec:
  selector:
    app: nginx-multitool
  type: ClusterIP
  ports:
    - name: nginx
      port: 9001      
      targetPort: 80
      protocol: TCP
    - name: multitool
      port: 9002
      targetPort: 8080
      protocol: TCP
