service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-svc
  namespace: default
spec:
  selector:
    app: nginx-multitool
  type: NodePort
  ports:
    - name: web 
      port: 80      
      protocol: TCP
      nodePort: 30100
